<resources>
    <string name="app_name">Veg-It</string>
    <string name="title_home">Home</string>
    <string name="title_classifyproducts">Scan Label</string>
    <string name="title_notifications">Notifications</string>
    <!--Login Page-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_to_register">Swipe Left to Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid Email</string>
    <string name="invalid_password">Password must be at least 3 characters</string>
    <string name="invalid_firstName">First name must be at least 2 characters</string>
    <string name="invalid_lastName">Last name must be at least 2 characters</string>
    <string name="login_failed">"Invalid Email or Password"</string>
    <string name="sign_up_failed">"User with that email already exists"</string>
    <string name="e_mail">Email</string>
    <string name="tag">Make shopping easy!</string>
    <string name="swipe_right_to_login">Swipe Right to Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="invalid_name">Not a valid Product Name</string>
    <string name="invalid_url">Not a valid Image URL</string>
    <string name="invalid_diet">Must select a diet type</string>
    <string name="invalid_category">Must select a category type</string>
    <string name="invalid_ingredients">Product must have ingredients</string>
    <string name="submit_product_failed">"Something went wrong"</string>
    <string name="submit_product_success">"Product submitted successfully"</string>
    <string name="avoid_products">Products to <font color='#cc3300'>AVOID</font></string>
    <string name="safe_ingredients">Common <font color='#00cc00'>SAFE</font> Ingredients</string>
    <string name="not_safe_ingredients">Common <font color='#cc3300'>UNSAFE</font> Ingredients</string>
    <string name="scan_history">Your <font color='#00cc00'>SCAN HISTORY</font></string>
    <string name="ingredient_rank">#%1$d</string>

    <string name="vegetarian_desc">This refers to a diet where egg and dairy products can be consumed</string>
    <string name="vegan_desc">This refers to a diet where no animal products are consumed</string>
    <!--    diet names-->
    <string name="vegan_diet">Vegan</string>
    <string name="vegetarian_diet">Vegetarian</string>
    <string-array name="diet_types">
        <item>Select Diet Type...</item>
        <item>Vegan</item>
        <item>Vegetarian</item>
        <item>Non-Vegetarian</item>
        <item>Other</item>
    </string-array>
    <string-array name="category">
        <item>Select Category Type...</item>
        <item>Nut</item>
        <item>Pasta</item>
        <item>Baking</item>
        <item>Beverage</item>
        <item>Cereal</item>
        <item>Dairy</item>
        <item>Fruit</item>
        <item>Vegetable</item>
        <item>Baby Food</item>
        <item>Animal Food</item>
        <item>Aquatic Food</item>
        <item>Snack Food</item>
        <item>Canned Food</item>
        <item>Frozen Food</item>
    </string-array>
</resources>