<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="sheridan.sharmupm.vegit_capstone.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_classifyproducts"
        android:name="sheridan.sharmupm.vegit_capstone.ui.dashboard.ClassifyproductsFragment"
        android:label="@string/title_classifyproducts"
        tools:layout="@layout/fragment_classifyproducts" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="sheridan.sharmupm.vegit_capstone.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_groceryList"
        android:name="sheridan.sharmupm.vegit_capstone.ui.groceryList.groceryListFragment"
        android:label="Grocery List"
        tools:layout="@layout/fragment_grocery_list" />
</navigation>